syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

// Required to generate go
option go_package = "./";
option java_package = "com.dmsc.service.model.user";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string username = 4;
  string password = 5;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string username = 4;
}

message CreateUser {
  string name = 1;
  string email = 2;
  string username = 3;
  string password = 4;
}

message AuthenticateUser {
  string username = 1;
  string password = 2;
}

service UserService {
  rpc Create(CreateUser) returns (UserResponse);
  rpc GetUser(google.protobuf.Empty) returns (UserResponse);
  rpc GetUserLogin(AuthenticateUser) returns (UserResponse);
}
